examples/controller/yamls/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: controller-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: inspr.com
      http:
        paths:
          - path: /update
            backend:
              serviceName: node-2cb79eff-d313-473f-8dd9-25defb1aed31
              servicePort: 8080
          - path: /delete
            backend:
              serviceName: node-2cb79eff-d313-473f-8dd9-25defb1aed31
              servicePort: 8080
          - path: /create
            backend:
              serviceName: node-2cb79eff-d313-473f-8dd9-25defb1aed31
              servicePort: 8080
